--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
     EOSBrowserSupporter.prototype = {
         build: function (redirectURL, options) {
             this.redirectURL = redirectURL;
-            const ui = Object.assign(defaultOptions.ui, options.ui);
-            this.options = Object.assign(defaultOptions, options);
-            this.options.ui = ui;
+            this.options = defaultOptions;
         },
         setup: function () {
             this.setupToEdgeButton();
